syntax = "proto3";

package foodaid.chat;



option java_multiple_files = true;
option java_package = "grpc.foodaid.Chat";
option java_outer_classname = "ChatImpl";

// Bi‚Äêdirectional streaming RPC: live chat organisation and delivery agent
service ChatService {
	rpc LiveChat(stream ChatRequest) returns (stream ChatResponse );
}

message ChatRequest {

	string senderName = 1;    // name of message sender
	string message = 2;    // chat message
}

message ChatResponse {
	string senderName = 1;    // name of message sender
	string responseMessage = 2;    // chat message
}

